--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-color": "^2",
+    "antd": "^3",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-color": "^2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
